# svg-nd-rs

./: Cargo.toml  README.md  RELEASES.md
src/: bbox.rs  bezier_path.rs  color_database.rs  colors.rs  elements.rs  graph.rs  header.rs  lib.rs  namespace.rs  polygon.rs  range.rs  shapes.rs  svg.rs  svg_element.rs  svg_error.rs  svg_event.rs  traits.rs  transform.rs  types.rs  xml.rs
src/elements/: group.rs  path.rs  traits.rs
src/shapes/: polygon.rs
src/svg/: svg_colors.rs  svg_element.rs
src/text/: font_metrics.rs
src/types/: error.rs  transform.rs
tests/: diagram.rs  simple.rs
